Adapt to drupal backend (pull request)

--- a/src/pages/pull-requests/pull-requests.page.html
+++ b/src/pages/pull-requests/pull-requests.page.html
@@ -29,7 +29,7 @@
               <strong>
                 <ion-icon name="git-pull-request"></ion-icon>
               </strong>
-              <div><strong>{{pullRequest.count}}</strong></div>
+              <div><strong>{{pullRequest.id}}</strong></div>
             </div>
             <div class="branches-wrapper">
               <h4 class="text-ellipsis"><strong>from</strong> {{pullRequest.from}}</h4>
@@ -40,7 +40,7 @@
           <ion-row color="primary" class="color-primary">
             <ion-col col-8 col-sm class="text-ellipsis">
               <ion-icon name="contact" item-left></ion-icon>
-              {{pullRequest.userName}}
+              {{pullRequest.username}}
             </ion-col>
             <ion-col col-4 col-sm>
               <ion-icon name="git-commit" item-left></ion-icon>
