Adapt to drupal backend

--- a/src/pages/accounts/accounts.page.html
+++ b/src/pages/accounts/accounts.page.html
@@ -35,12 +35,12 @@
         </ion-row>
       </div>
 
-      <button class="remove-account-button" (click)="deleteAccount(account.id)" item-right ion-button clear>
+      <button class="remove-account-button" (click)="deleteAccount(account.account_id)" item-right ion-button clear>
         <ion-icon name="close"></ion-icon>
       </button>
     </ion-item>
   </ion-list>
-
+  s
   <button ion-button block icon-only large color="primary" (click)="addAccount()">
     <ion-icon name="add"></ion-icon>
   </button>
