Adapt to drupal backend

--- a/src/pages/pull-requests/pull-requests.page.html
+++ b/src/pages/pull-requests/pull-requests.page.html
@@ -19,7 +19,7 @@
       <ion-card class="top-bottom-margin">
 
         <ion-card-header color="light" class="text-ellipsis">
-          {{pullRequest.description}}
+          {{pullRequest.title}}
         </ion-card-header>
 
         <ion-card-content>
