--- a/src/pages/accounts/accounts.page.html
+++ b/src/pages/accounts/accounts.page.html
@@ -45,4 +45,13 @@
     <ion-icon name="add"></ion-icon>
   </button>
 
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
+
 </ion-content>
