--- a/src/pages/settings/settings.page.html
+++ b/src/pages/settings/settings.page.html
@@ -9,8 +9,8 @@
   <ion-navbar>
     <ion-title>Settings</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only>
-        <ion-icon name="menu"></ion-icon>
+      <button ion-button icon-only (click)="actionsCollaborator(collaborator, 'add')">
+        <ion-icon name="ios-checkmark-circle" color="primary"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -19,6 +19,24 @@
 
 
 <ion-content padding>
+  <ion-item color="dark">
+    <ion-label><strong color="primary">Collaborator:</strong></ion-label>
+    <ion-input class="color-light" [(ngModel)]="collaborator" type="text"></ion-input>
+    <button ion-button icon-only item-right type="button" (click)="confirmAddCollaborator(collaborator)">
+      <ion-icon color="light" name="person-add"></ion-icon>
+    </button>
+  </ion-item>
+
+  <ion-list no-lines>
+    <ion-item *ngFor="let user of users" color="dark">
+      <ion-icon name="person" item-left color="light"></ion-icon>
+      <strong color="light">{{ user }}</strong>
+      <button ion-button icon-only item-right type="button" (click)="deleteUserfromCollaborator(user)">
+        <ion-icon color="light" name="close"></ion-icon>
+      </button>
+    </ion-item>
+  </ion-list>
+
   <ion-list [virtualScroll]="settings" approxItemHeight="108px">
     <ion-item *virtualItem="let setting" color="light" margin-bottom>
       <ion-icon class="large-icon" item-left [name]="setting.fork ? 'git-network' : 'book'"></ion-icon>
@@ -34,7 +52,7 @@
           </ion-col>
           <ion-col col-8 class="setting-info-container text-ellipsis">
             <ion-icon item-left ios="ios-time-outline" md="md-time"></ion-icon>
-            {{setting.time}}
+            {{setting.date}}
           </ion-col>
         </ion-row>
 
@@ -46,4 +64,9 @@
       </button>
     </ion-item>
   </ion-list>
+
+  <button ion-button block icon-left (click)="actionsCollaborator(collaborator, 'delete')">
+    <ion-icon color="light" name="person"></ion-icon>
+    <strong color="light">Delete collaborator</strong>
+  </button>
 </ion-content>
