--- a/src/pages/repositories/repositories.page.html
+++ b/src/pages/repositories/repositories.page.html
@@ -5,19 +5,18 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
     <ion-title>Repositories</ion-title>
     <ion-fab right middle>
       <button ion-fab mini>
-        <ion-icon name="person"></ion-icon>
+        <ion-icon color="light" name="person"></ion-icon>
       </button>
       <ion-fab-list side="left">
-        <button ion-fab (click)="goToUsers('add')">
-          <ion-icon name="add"></ion-icon>
+        <button ion-fab color="primary" (click)="goToUsers('add')">
+          <ion-icon color="light" name="add"></ion-icon>
         </button>
-        <button ion-fab (click)="goToUsers('delete')">
-          <ion-icon name="close"></ion-icon>
+        <button ion-fab color="primary" (click)="goToUsers('delete')">
+          <ion-icon color="light" name="close"></ion-icon>
         </button>
       </ion-fab-list>
     </ion-fab>
