Adapt to Drupal Backend (repositories and users).

--- a/src/pages/repositories/repositories.page.html
+++ b/src/pages/repositories/repositories.page.html
@@ -37,11 +37,11 @@
         <ion-row class="color-primary">
           <ion-col col-4 class="setting-info-container">
             <ion-icon item-left name="ios-alert-outline"></ion-icon>
-            {{repository.alert}}
+            {{repository.issues}}
           </ion-col>
           <ion-col col-8 class="setting-info-container text-ellipsis">
             <ion-icon item-left ios="ios-time-outline" md="md-time"></ion-icon>
-            {{repository.date}}
+            {{repository.age}}
           </ion-col>
         </ion-row>
 
