--- a/src/pages/collaborators/collaborators.page.html
+++ b/src/pages/collaborators/collaborators.page.html
@@ -23,11 +23,11 @@
         <ion-row class="color-primary">
           <ion-col col-4 class="setting-info-container">
             <ion-icon item-left name="ios-alert-outline"></ion-icon>
-            {{repository.alert}}
+            {{repository.issues}}
           </ion-col>
           <ion-col col-4 class="setting-info-container text-ellipsis">
             <ion-icon item-left ios="ios-time-outline" md="md-time"></ion-icon>
-            {{repository.date}}
+            {{repository.age}}
           </ion-col>
           <ion-col col-4>
             <ion-item color="light">
