--- a/src/pages/users/users.page.html
+++ b/src/pages/users/users.page.html
@@ -26,7 +26,10 @@
       <ion-avatar item-left>
         <img src="{{user.photoUrl}}">
       </ion-avatar>
-      <h2>{{user.username}}</h2>
+      <h2>
+        <ion-icon item-left name="logo-github"></ion-icon>
+        {{user.username}}
+      </h2>
       <p>{{user.fullname}}</p>
       <p>{{user.email}}</p>
     </button>
