--- a/src/pages/repositories/repositories.page.html
+++ b/src/pages/repositories/repositories.page.html
@@ -26,7 +26,7 @@
 
 <ion-content padding>
 
-  <ion-list [virtualScroll]="repositories" approxItemHeight="108px">
+  <ion-list class="repos-list" [virtualScroll]="repositories" approxItemHeight="108px">
     <ion-item *virtualItem="let repository" color="light" margin-bottom>
       <ion-icon class="large-icon" item-left [name]="repository.fork ? 'git-network' : 'book'"></ion-icon>
 
