Fixed filter collaborators.

--- a/src/pages/collaborators/collaborators.page.html
+++ b/src/pages/collaborators/collaborators.page.html
@@ -42,7 +42,7 @@
 
   <button ion-button block icon-left (click)="actionsCollaborator()">
     <ion-icon color="light" name="person"></ion-icon>
-    <strong color="light">{{action}} collaborator</strong>
+    <strong ion-text color="light">{{action}} collaborator</strong>
   </button>
 
 </ion-content>
