--- a/src/pages/accounts/accounts.page.html
+++ b/src/pages/accounts/accounts.page.html
@@ -35,7 +35,7 @@
         </ion-row>
       </div>
 
-      <button class="remove-account-button" (click)="deleteAccount(account.account_id)" item-right ion-button clear>
+      <button class="remove-account-button" (click)="deleteAccount(account.accountId)" item-right ion-button clear>
         <ion-icon name="close"></ion-icon>
       </button>
     </ion-item>
