Adapt to drupal backend (#1)
* Adapt to drupal backend (pull request)

* Adapt to drupal backend

* Adapt to drupal backend

* Deleted commits, comments and added repository name.

* Create new Settings and Users (Create basic markup, Adapt to UI design and Create basic service and intearct with it).

* New screens: repositories, users and collaborators.

* Add filtered and to check permissions.

* add checkbox and filter.

* changes to add or delete collaborators.

* Adapt to Drupal Backend (repositories and users).

* Adapt to Drupal Backend.

* Changed check to collaborator.

* Adapt to Drupal backend methods add and delete collaborator.

* Adapt to Drupal Backend collaborators.

* Adapt to Ionic 3

* Adapt to Ionic 3

* Adapt to size ion-list and changes in tokenServices.

* Fixed problem in login.

* Fixed filter collaborators.

* Refactor code.

* Refactor code.

* fixed error users and accounts, refactor code and button add/delete collaborator fixed.

* Update accounts.page.html

* Update collaborators.service.ts

* Update pull-requests.page.ts

* Update repositories.service.ts

* Update users.page.ts

--- a/src/pages/accounts/accounts.page.html
+++ b/src/pages/accounts/accounts.page.html
@@ -14,6 +14,9 @@
 
 <ion-content padding>
 
+  <div *ngIf="accounts && accounts.length === 0" class="no-accounts-container">
+    You have not added any account yet!
+  </div>
   <ion-list [virtualScroll]="accounts" approxItemHeight="115px">
     <ion-item *virtualItem="let account" margin-bottom>
       <ion-avatar item-left><img [src]="account.photoUrl"></ion-avatar>
@@ -35,14 +38,23 @@
         </ion-row>
       </div>
 
-      <button class="remove-account-button" (click)="deleteAccount(account.id)" item-right ion-button clear>
+      <button class="remove-account-button" (click)="deleteAccount(account.accountId)" item-right ion-button clear>
         <ion-icon name="close"></ion-icon>
       </button>
     </ion-item>
   </ion-list>
-
+  
   <button ion-button block icon-only large color="primary" (click)="addAccount()">
     <ion-icon name="add"></ion-icon>
   </button>
+
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
 
 </ion-content>
