Fixed error getting account when you don't have any, added connector service and modified client_id and backend_url in constants.

--- a/src/pages/accounts/accounts.page.html
+++ b/src/pages/accounts/accounts.page.html
@@ -14,7 +14,7 @@
 
 <ion-content padding>
 
-  <div *ngIf="accounts && accounts.length === 0" class="no-accounts-container">
+  <div *ngIf="accounts && accounts.length === 0" class="no-elements-container">
     You have not added any account yet!
   </div>
   <ion-list [virtualScroll]="accounts" approxItemHeight="115px">
