--- a/src/pages/pull-requests/pull-requests.page.html
+++ b/src/pages/pull-requests/pull-requests.page.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content>
-  <div *ngIf="pullRequests && pullRequests.length === 0" class="no-pull-request-container" color="light">
+  <div *ngIf="pullRequests && pullRequests.length === 0" class="no-elements-container" color="light">
     You do not have any open pull request!
   </div>
   <ion-list [virtualScroll]="pullRequests" no-lines approxItemHeight="210px">
