--- a/src/pages/pull-requests/pull-requests.page.html
+++ b/src/pages/pull-requests/pull-requests.page.html
@@ -51,7 +51,7 @@
             </ion-col>
             <ion-col col-6 col-sm class="text-ellipsis">
               <ion-icon ios="ios-time-outline" md="md-time" item-left></ion-icon>
-              {{pullRequest.date}}
+              {{pullRequest.date | date: 'shortDate'}}
             </ion-col>
           </ion-row>
 
