--- a/src/pages/repositories/repositories.page.html
+++ b/src/pages/repositories/repositories.page.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the Settings page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>Repositories</ion-title>
@@ -50,10 +44,10 @@
 
       </div>
 
-      <button class="arrow-forward-button" (click)="goToRepositorySettings(repository)" item-right ion-button
-              clear>
-        <ion-icon color="primary" ios="ios-arrow-forward" md="ios-arrow-forward"></ion-icon>
-      </button>
+      <!--<button class="arrow-forward-button" (click)="goToRepositorySettings(repository)" item-right ion-button-->
+      <!--clear>-->
+      <!--<ion-icon color="primary" ios="ios-arrow-forward" md="ios-arrow-forward"></ion-icon>-->
+      <!--</button>-->
     </ion-item>
   </ion-list>
 </ion-content>
